updating forest building
adding in more movable stuff

--- a/Sero_4.26/Serotopia_Grey_1 4.26/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Sero_4.26/Serotopia_Grey_1 4.26/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -148,7 +148,7 @@ Synth=False
 
 [ContentBrowser]
 ContentBrowserTab1.SelectedPaths=/Game/Levels
-ContentBrowserTab1.SelectedPaths=/Game/Player
+ContentBrowserTab1.SelectedPaths=/Game
 None=======
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
@@ -170,7 +170,7 @@ ContentBrowserTab1.CollectionsExpanded=True
 ContentBrowserTab1.SelectedCollections=
 ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ViewMode=0
-ContentBrowserTab1.ThumbnailSizeScale=0.171834
+ContentBrowserTab1.ThumbnailSizeScale=0.000000
 ContentBrowserTab1.CurrentViewType=1
 ContentBrowserTab1.FavoriteSplitter.SlotSize2=0.400000
 SequenceBrowser.ActiveTypeFilters=
@@ -201,7 +201,7 @@ ToolbarOpenBPClass.CurrentViewType=0
 
 [EditorStartup]
 LastLevel=/Game/Levels/Forest
-LastLevel=/Game/Levels/Sewer
+LastLevel=/Game/Levels/Forest
 None=======
 ContentBrowserTab1.ThumbnailSizeScale=0.026786
 ContentBrowserTab1.CurrentViewType=1
@@ -213,26 +213,26 @@ ToolbarOpenBPClass.CurrentViewType=0
 CleanShutdown=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Animation/Soap_Chara/Soap_Anim
-MRUItem1=/Game/Animation/Soap_Chara/Johnson_sad_idle__Anim
-MRUItem2=/Game/Gnome_Animated/ChefGnome/ChefGnome
-MRUItem3=/Game/Gnome_Animated/ChefGnome/Chef_Blend
-MRUItem4=/Game/Gnome_Animated/ChefGnome/Chef_Ani
-MRUItem5=/Game/Animation/Soap_Chara/Soap_Character
-MRUItem6=/Game/Animation/Soap_Chara/Soap_Chara
-MRUItem7=/Game/Levels/Sewer
-MRUItem8=/Game/Animation/Character/Jump_Anim_mixamo_com
-MRUItem9=/Game/Animation/Character/Jumping_Anim_mixamo_com
-MRUItem10=/Game/Animation/Character/Standing_Idle_02_Anim_mixamo_com
-MRUItem11=/Game/Player/Movement
-MRUItem12=/Game/Animation/Character/Standard_Run_Anim_mixamo_com
-MRUItem13=/Game/Player/PlayerCharacter
-MRUItem14=/Game/Player/Player_BP
-MRUItem15=/Game/Levels/Forest
-MRUItem16=/Game/MovableRock3
-MRUItem17=/Game/Building
-MRUItem18=/Game/Blueprints/Testing/disappear_cube_blueprint
-MRUItem19=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
+MRUItem0=/Game/Axe/mesh/MovableAxe
+MRUItem1=/Game/Levels/Forest
+MRUItem2=/Game/Animation/Soap_Chara/Soap_Anim
+MRUItem3=/Game/Animation/Soap_Chara/Johnson_sad_idle__Anim
+MRUItem4=/Game/Gnome_Animated/ChefGnome/ChefGnome
+MRUItem5=/Game/Gnome_Animated/ChefGnome/Chef_Blend
+MRUItem6=/Game/Gnome_Animated/ChefGnome/Chef_Ani
+MRUItem7=/Game/Animation/Soap_Chara/Soap_Character
+MRUItem8=/Game/Animation/Soap_Chara/Soap_Chara
+MRUItem9=/Game/Levels/Sewer
+MRUItem10=/Game/Animation/Character/Jump_Anim_mixamo_com
+MRUItem11=/Game/Animation/Character/Jumping_Anim_mixamo_com
+MRUItem12=/Game/Animation/Character/Standing_Idle_02_Anim_mixamo_com
+MRUItem13=/Game/Player/Movement
+MRUItem14=/Game/Animation/Character/Standard_Run_Anim_mixamo_com
+MRUItem15=/Game/Player/PlayerCharacter
+MRUItem16=/Game/Player/Player_BP
+MRUItem17=/Game/MovableRock3
+MRUItem18=/Game/Building
+MRUItem19=/Game/Blueprints/Testing/disappear_cube_blueprint
 
 [DetailCategories]
 SoundMix.EQ=True
@@ -1893,10 +1893,47 @@ Chef_Ani_C.RootMotion=True
 Chef_Ani_C.Notifies=True
 Soap_Anim_C.RootMotion=True
 Soap_Anim_C.Notifies=True
+MovableLog_C.TransformCommon=True
+MovableLog_C.Rendering=True
+MovableLog_C.Replication=True
+MovableLog_C.Collision=True
+MovableLog_C.Input=True
+MovableLog_C.Actor=True
+Tree2Movable_C.TransformCommon=True
+Tree2Movable_C.Rendering=True
+Tree2Movable_C.Replication=True
+Tree2Movable_C.Collision=True
+Tree2Movable_C.Input=True
+Tree2Movable_C.Actor=True
+Tree1Movable_C.TransformCommon=True
+Tree1Movable_C.Rendering=True
+Tree1Movable_C.Replication=True
+Tree1Movable_C.Collision=True
+Tree1Movable_C.Input=True
+Tree1Movable_C.Actor=True
+Tree5Movable_C.TransformCommon=True
+Tree5Movable_C.Rendering=True
+Tree5Movable_C.Replication=True
+Tree5Movable_C.Collision=True
+Tree5Movable_C.Input=True
+Tree5Movable_C.Actor=True
+MovableAxe_C.TransformCommon=True
+MovableAxe_C.Rendering=True
+MovableAxe_C.Replication=True
+MovableAxe_C.Collision=True
+MovableAxe_C.Input=True
+MovableAxe_C.Actor=True
+MovableAxe_C.Tick=True
+AxeInteractLog_C.TransformCommon=True
+AxeInteractLog_C.Rendering=True
+AxeInteractLog_C.Replication=True
+AxeInteractLog_C.Collision=True
+AxeInteractLog_C.Input=True
+AxeInteractLog_C.Actor=True
 
 [DetailPropertyExpansion]
 SoundClass="\"Object.SoundClass.Properties\" \"Object.SoundClass.ChildClasses\" "
-Object="\"Object.SkeletalMeshes\" "
+Object=
 SoundMix="\"Object.SoundClasses.SoundClassEffects\" "
 ThirdPersonCharacter_C="\"Object.Default.Light\" \"Object.Default.Dark\" \"Object.Default.LightRotation\" \"Object.Default.DarkRotation\" \"Object.Default.LightForwardVector\" \"Object.Default.DarkForwardVector\" \"Object.Default.LightLocation\" \"Object.Default.DarkLocation\" \"Object.Replication.ReplicatedMovement\" \"Object.Actor.PivotOffset\" "
 ThirdPersonCharacter_C=
@@ -1940,15 +1977,15 @@ LevelSequenceEditorSettings="\"Object.Tracks.TrackSettings\" \"Object.Tracks.Tra
 PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 PostProcessVolume="\"Object.PostProcessVolumeSettings.Settings.WeightedBlendables\" \"Object.PostProcessVolumeSettings.Settings.WeightedBlendables.Array\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.PostProcessVolumeSettings.Settings.WeightedBlendables\" \"Object.PostProcessVolumeSettings.Settings.WeightedBlendables.Array\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
-Brush="\"Object.PostProcessVolumeSettings.Settings.WeightedBlendables\" \"Object.PostProcessVolumeSettings.Settings.WeightedBlendables.Array\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 GeomModifier_Extrude="\"Object.Settings\" "
 GeomModifier_Edit="\"Object.Settings\" "
 GeomModifier="\"Object.Settings\" "
 BoxComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[8]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 ShapeComponent=
-PrimitiveComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-SceneComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-ActorComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+PrimitiveComponent="\"Object.Rendering.WireframeColorOverride\" \"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+SceneComponent=
+ActorComponent=
 TriggerVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 GeomModifier_Pen="\"Object.Settings\" "
 StaticMeshActor=
@@ -1962,7 +1999,7 @@ Visual=
 TextBlock="\"Object.Appearance.Font\" "
 TextLayoutWidget="\"Object.Appearance.Font\" "
 StaticMeshComponent="\"Object.Rendering.WireframeColorOverride\" \"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-MeshComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+MeshComponent="\"Object.Rendering.WireframeColorOverride\" \"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 SkeletalMeshComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 SkinnedMeshComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 CameraComponent="\"Object.PostProcess.PostProcessSettings\" \"Object.PostProcess.PostProcessSettings.LensFlareTints\" "
@@ -2291,6 +2328,7 @@ None=======
 /Game/Gnome_Animated/ChefGnome/Chef_Blend.Chef_Blend=1
 /Game/Gnome_Animated/ChefGnome/Chef_Ani.Chef_Ani=1
 /Game/Animation/Soap_Chara/Johnson_sad_idle__Anim.Johnson_sad_idle__Anim=1
+/Game/Axe/mesh/MovableAxe.MovableAxe=1
 
 [UMGEditor.Designer]
 PreviewWidth=1280
@@ -2356,9 +2394,9 @@ bHideUnrelatedNodes=False
 ScreenPosition=X=624.000 Y=235.000
 ScreenPosition=X=267.000 Y=145.000
 WindowSize=X=1305.000 Y=745.000
-WindowSize=X=1405.000 Y=769.000
+WindowSize=X=1410.000 Y=774.000
 None=======
-InitiallyMaximized=True
+InitiallyMaximized=False
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -2375,7 +2413,7 @@ FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
 UNR=../../../../../../Users/drewb/Documents/Serotopia Game/Serotopia/Serotopia_Grey_1 4.26/Content/Levels
-UNR=../../../../../../Users/jedie/OneDrive/Documents/GitHub/Serotopia V3/Serotopia/Sero_4.26/Serotopia_Grey_1 4.26/Content/Levels
+UNR=D:/ihatethis/Serotopia/Sero_4.26/Serotopia_Grey_1 4.26/Content/Levels
 None=======
 BRUSH=D:/Unreal Projects/Serotopia/Serotopia_Grey_1/Content/
 FBX=D:/Unreal Projects/Serotopia/Serotopia_Grey_1/Content/
@@ -3942,8 +3980,8 @@ DistCurveEditor.TimeStamp=2021.02.15-00.29.15
 DistCurveEditor.LastCompileMethod=Unknown
 
 [MRU]
-MRUItem0=/Game/Levels/Sewer
-MRUItem1=/Game/Levels/Forest
+MRUItem0=/Game/Levels/Forest
+MRUItem1=/Game/Levels/Sewer
 MRUItem2=/Game/Levels/Bubbleopolis
 MRUItem3=/Game/Levels/MainMenu
 MRUItem4=/Game/Levels/NewMap
@@ -3957,7 +3995,7 @@ MRUItem11=/Game/Levels/Green_Paint
 
 [MessageLog]
 LastLogListing=LightingResults
-LastLogListing=FBXImport
+LastLogListing=LoadErrors
 None=======
 Voice.TimeStamp=2021.02.05-04.34.25
 Voice.LastCompileMethod=External
@@ -4275,7 +4313,7 @@ TemplateSequenceEditorSettings=GameMapsSettings.DefaultModes.SelectedGameModeDet
 StaticMeshComponent=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,
 SceneComponent=
 Drawbridge_Blueprint_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,SkeletalMeshComponent.Collision.Collision,
-CapsuleComponent=
+CapsuleComponent=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,
 SkeletalMeshComponent=SkeletalMeshComponent.Collision.Collision,
 PlayerStart=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,
 InstancedFoliageActor=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,
@@ -4303,8 +4341,19 @@ AssetViewerSettings=AssetViewerSettings.Settings.PostProcessing,AssetViewerSetti
 PersonaPreviewSceneDescription=AssetViewerSettings.Settings.PostProcessing,AssetViewerSettings.Settings.Rendering Features,
 PreviewMeshCollection=
 Player_BP_C=
+MovableLog_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,
+Tree2Movable_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,
+Tree1Movable_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,
+Tree5Movable_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,
 
 [PlacementMode]
+RecentlyPlaced=/Game/AxeInteractLog.AxeInteractLog;/Engine/Transient.ActorFactoryBlueprint_0
+RecentlyPlaced=/Game/Axe/mesh/MovableAxe.MovableAxe;/Engine/Transient.ActorFactoryBlueprint_0
+RecentlyPlaced=/Game/Logs/Log2/Log2.Log2;
+RecentlyPlaced=/Game/Tree5Movable.Tree5Movable;
+RecentlyPlaced=/Game/Tree1Movable.Tree1Movable;
+RecentlyPlaced=/Game/Tree2Movable.Tree2Movable;
+RecentlyPlaced=/Game/MovableLog.MovableLog;
 RecentlyPlaced=/Game/MovableRock4.MovableRock4;
 RecentlyPlaced=/Game/MovableRock3.MovableRock3;
 RecentlyPlaced=/Game/Blueprints/MovableRock2.MovableRock2;
@@ -4318,13 +4367,6 @@ RecentlyPlaced=/Game/Mush3Pedestal.Mush3Pedestal;
 RecentlyPlaced=/Game/MovableMush3.MovableMush3;
 RecentlyPlaced=/Game/MovableMush2.MovableMush2;
 RecentlyPlaced=/Game/MovableMush1.MovableMush1;
-RecentlyPlaced=/Game/Geometry/Meshes/Pedestal_Thingy.Pedestal_Thingy;
-RecentlyPlaced=/Game/StarterContent/Materials/M_CobbleStone_Smooth.M_CobbleStone_Smooth;
-RecentlyPlaced=/Game/Materials/T_Tiles_Textues/Tiles_Stone/M_Tile_Stone_3.M_Tile_Stone_3;
-RecentlyPlaced=/Game/Mat_Hedge.Mat_Hedge;
-RecentlyPlaced=/Game/Building.Building;
-RecentlyPlaced=/Script/Engine.PlayerStart;/Engine/Transient.ActorFactoryPlayerStart_0
-RecentlyPlaced=/Game/ParticleSystems/NS_BubbleTurbine.NS_BubbleTurbine;
 None=======
 BoxComponent=BoxComponent.Collision.Collision,
 PostProcessVolume=PostProcessVolume.Color Grading.Color Grading
