--- a/Sero_4.26/Serotopia_Grey_1 4.26/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Sero_4.26/Serotopia_Grey_1 4.26/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -211,28 +211,29 @@ ToolbarOpenBPClass.CurrentViewType=0
 
 [AssetEditorSubsystem]
 CleanShutdown=True
+OpenAssetsAtExit=/Game/Levels/Forest.Forest:PersistentLevel.Forest
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Axe/mesh/MovableAxe
-MRUItem1=/Game/Levels/Forest
-MRUItem2=/Game/Animation/Soap_Chara/Soap_Anim
-MRUItem3=/Game/Animation/Soap_Chara/Johnson_sad_idle__Anim
-MRUItem4=/Game/Gnome_Animated/ChefGnome/ChefGnome
-MRUItem5=/Game/Gnome_Animated/ChefGnome/Chef_Blend
-MRUItem6=/Game/Gnome_Animated/ChefGnome/Chef_Ani
-MRUItem7=/Game/Animation/Soap_Chara/Soap_Character
-MRUItem8=/Game/Animation/Soap_Chara/Soap_Chara
-MRUItem9=/Game/Levels/Sewer
-MRUItem10=/Game/Animation/Character/Jump_Anim_mixamo_com
-MRUItem11=/Game/Animation/Character/Jumping_Anim_mixamo_com
-MRUItem12=/Game/Animation/Character/Standing_Idle_02_Anim_mixamo_com
-MRUItem13=/Game/Player/Movement
-MRUItem14=/Game/Animation/Character/Standard_Run_Anim_mixamo_com
-MRUItem15=/Game/Player/PlayerCharacter
-MRUItem16=/Game/Player/Player_BP
-MRUItem17=/Game/MovableRock3
-MRUItem18=/Game/Building
-MRUItem19=/Game/Blueprints/Testing/disappear_cube_blueprint
+MRUItem0=/Game/AxeInteractLog
+MRUItem1=/Game/Axe/mesh/MovableAxe
+MRUItem2=/Game/Levels/Forest
+MRUItem3=/Game/BubStair
+MRUItem4=/Game/Blueprints/Pickups/SceneFinish_Actor
+MRUItem5=/Game/Levels/Bubbleopolis
+MRUItem6=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
+MRUItem7=/Game/Animation/Soap_Chara/Soap_Anim
+MRUItem8=/Game/Animation/Soap_Chara/Johnson_sad_idle__Anim
+MRUItem9=/Game/Gnome_Animated/ChefGnome/ChefGnome
+MRUItem10=/Game/Gnome_Animated/ChefGnome/Chef_Blend
+MRUItem11=/Game/Gnome_Animated/ChefGnome/Chef_Ani
+MRUItem12=/Game/Animation/Soap_Chara/Soap_Character
+MRUItem13=/Game/Animation/Soap_Chara/Soap_Chara
+MRUItem14=/Game/Levels/Sewer
+MRUItem15=/Game/Animation/Character/Jump_Anim_mixamo_com
+MRUItem16=/Game/Animation/Character/Jumping_Anim_mixamo_com
+MRUItem17=/Game/Animation/Character/Standing_Idle_02_Anim_mixamo_com
+MRUItem18=/Game/Player/Movement
+MRUItem19=/Game/Animation/Character/Standard_Run_Anim_mixamo_com
 
 [DetailCategories]
 SoundMix.EQ=True
@@ -1930,13 +1931,15 @@ AxeInteractLog_C.Replication=True
 AxeInteractLog_C.Collision=True
 AxeInteractLog_C.Input=True
 AxeInteractLog_C.Actor=True
+AxeInteractLog_C.Tick=True
+AxeInteractLog_C.Default=True
 
 [DetailPropertyExpansion]
 SoundClass="\"Object.SoundClass.Properties\" \"Object.SoundClass.ChildClasses\" "
 Object=
 SoundMix="\"Object.SoundClasses.SoundClassEffects\" "
 ThirdPersonCharacter_C="\"Object.Default.Light\" \"Object.Default.Dark\" \"Object.Default.LightRotation\" \"Object.Default.DarkRotation\" \"Object.Default.LightForwardVector\" \"Object.Default.DarkForwardVector\" \"Object.Default.LightLocation\" \"Object.Default.DarkLocation\" \"Object.Replication.ReplicatedMovement\" \"Object.Actor.PivotOffset\" "
-ThirdPersonCharacter_C=
+ThirdPersonCharacter_C="\"Object.Replication.ReplicatedMovement\" \"Object.Actor.PivotOffset\" "
 Character="\"Object.Default.Light\" \"Object.Default.Dark\" \"Object.Default.LightRotation\" \"Object.Default.DarkRotation\" \"Object.Default.LightForwardVector\" \"Object.Default.DarkForwardVector\" \"Object.Default.LightLocation\" \"Object.Default.DarkLocation\" \"Object.Replication.ReplicatedMovement\" \"Object.Actor.PivotOffset\" "
 Character="\"Object.Replication.ReplicatedMovement\" \"Object.Actor.PivotOffset\" "
 Pawn="\"Object.Default.Light\" \"Object.Default.Dark\" \"Object.Default.LightRotation\" \"Object.Default.DarkRotation\" \"Object.Default.LightForwardVector\" \"Object.Default.DarkForwardVector\" \"Object.Default.LightLocation\" \"Object.Default.DarkLocation\" \"Object.Replication.ReplicatedMovement\" \"Object.Actor.PivotOffset\" "
@@ -1983,7 +1986,7 @@ GeomModifier_Edit="\"Object.Settings\" "
 GeomModifier="\"Object.Settings\" "
 BoxComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[8]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 ShapeComponent=
-PrimitiveComponent="\"Object.Rendering.WireframeColorOverride\" \"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+PrimitiveComponent=
 SceneComponent=
 ActorComponent=
 TriggerVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -2329,6 +2332,8 @@ None=======
 /Game/Gnome_Animated/ChefGnome/Chef_Ani.Chef_Ani=1
 /Game/Animation/Soap_Chara/Johnson_sad_idle__Anim.Johnson_sad_idle__Anim=1
 /Game/Axe/mesh/MovableAxe.MovableAxe=1
+/Game/BubStair.BubStair=1
+/Game/AxeInteractLog.AxeInteractLog=1
 
 [UMGEditor.Designer]
 PreviewWidth=1280
@@ -2394,9 +2399,9 @@ bHideUnrelatedNodes=False
 ScreenPosition=X=624.000 Y=235.000
 ScreenPosition=X=267.000 Y=145.000
 WindowSize=X=1305.000 Y=745.000
-WindowSize=X=1410.000 Y=774.000
+WindowSize=X=1415.000 Y=779.000
 None=======
-InitiallyMaximized=False
+InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -3981,8 +3986,8 @@ DistCurveEditor.LastCompileMethod=Unknown
 
 [MRU]
 MRUItem0=/Game/Levels/Forest
-MRUItem1=/Game/Levels/Sewer
-MRUItem2=/Game/Levels/Bubbleopolis
+MRUItem1=/Game/Levels/Bubbleopolis
+MRUItem2=/Game/Levels/Sewer
 MRUItem3=/Game/Levels/MainMenu
 MRUItem4=/Game/Levels/NewMap
 MRUItem5=/Game/Levels/testYellow
@@ -3995,7 +4000,7 @@ MRUItem11=/Game/Levels/Green_Paint
 
 [MessageLog]
 LastLogListing=LightingResults
-LastLogListing=LoadErrors
+LastLogListing=MapCheck
 None=======
 Voice.TimeStamp=2021.02.05-04.34.25
 Voice.LastCompileMethod=External
@@ -4345,11 +4350,15 @@ MovableLog_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Re
 Tree2Movable_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,
 Tree1Movable_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,
 Tree5Movable_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,
+MovableAxe_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,
+AxeInteractLog_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,
+Mush3Pedestal_C=
 
 [PlacementMode]
+RecentlyPlaced=/Script/Engine.RectLight;/Engine/Transient.ActorFactoryRectLight_0
+RecentlyPlaced=/Game/Logs/Log2/Log2.Log2;
 RecentlyPlaced=/Game/AxeInteractLog.AxeInteractLog;/Engine/Transient.ActorFactoryBlueprint_0
 RecentlyPlaced=/Game/Axe/mesh/MovableAxe.MovableAxe;/Engine/Transient.ActorFactoryBlueprint_0
-RecentlyPlaced=/Game/Logs/Log2/Log2.Log2;
 RecentlyPlaced=/Game/Tree5Movable.Tree5Movable;
 RecentlyPlaced=/Game/Tree1Movable.Tree1Movable;
 RecentlyPlaced=/Game/Tree2Movable.Tree2Movable;
@@ -4358,7 +4367,6 @@ RecentlyPlaced=/Game/MovableRock4.MovableRock4;
 RecentlyPlaced=/Game/MovableRock3.MovableRock3;
 RecentlyPlaced=/Game/Blueprints/MovableRock2.MovableRock2;
 RecentlyPlaced=/Game/Blueprints/MovableRock.MovableRock;
-RecentlyPlaced=/Script/Engine.RectLight;/Engine/Transient.ActorFactoryRectLight_0
 RecentlyPlaced=/Game/StarterContent/Materials/M_Wood_Floor_Walnut_Polished.M_Wood_Floor_Walnut_Polished;
 RecentlyPlaced=/Script/Engine.SpotLight;/Engine/Transient.ActorFactorySpotLight_0
 RecentlyPlaced=/Game/Mush1Pedestal.Mush1Pedestal;
