--- a/Sero_4.26/Serotopia_Grey_1 4.26/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Sero_4.26/Serotopia_Grey_1 4.26/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -148,7 +148,7 @@ Synth=False
 
 [ContentBrowser]
 ContentBrowserTab1.SelectedPaths=/Game/Levels
-ContentBrowserTab1.SelectedPaths=/Game/Dialogue
+ContentBrowserTab1.SelectedPaths=/Game/MushroomBoys/Mush5
 None=======
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
@@ -211,27 +211,26 @@ ToolbarOpenBPClass.CurrentViewType=0
 
 [AssetEditorSubsystem]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/Dialogue/DialogueWidget.DialogueWidget
-OpenAssetsAtExit=/Game/MushroomBoys/Mush5/Mush5.Mush5
+SuppressRestorePreviouslyOpenAssetsNotification=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Dialogue/DialogueWidget
-MRUItem1=/Game/Dialogue/DialogueBox
-MRUItem2=/Game/Dialogue/Dialogue
-MRUItem3=/Game/MushroomBoys/Mush5/Mush5
-MRUItem4=/Game/MushroomBoys/Mush4/Mush4
-MRUItem5=/Game/MushroomBoys/Mush3/Mush3
-MRUItem6=/Game/MushroomBoys/Mush1/Mush1
-MRUItem7=/Game/MushroomBoys/Mush2/Mush2_
-MRUItem8=/Game/Gnome_Animated/WinterGnome/Winter_Gnome
-MRUItem9=/Game/Dialogue/DialogueStructure
-MRUItem10=/Game/Dialogue/Interact_Interface
-MRUItem11=/Game/Gnome_Animated/SpringGnome/Spring_Gnome
-MRUItem12=/Game/Gnome_Animated/MushGnome/Mush_Gnome
-MRUItem13=/Game/Gnome_Animated/ChefGnome/ChefGnome
-MRUItem14=/Game/Gnome_Animated/FallGnome/Spring_Gnome
-MRUItem15=/Game/Dialogue/Signpost_BP
-MRUItem16=/Game/Levels/Forest
+MRUItem0=/Game/MushroomBoys/Mush5/Mush5
+MRUItem1=/Game/Levels/Forest
+MRUItem2=/Game/Dialogue/DialogueWidget
+MRUItem3=/Game/Dialogue/DialogueBox
+MRUItem4=/Game/Dialogue/Dialogue
+MRUItem5=/Game/MushroomBoys/Mush4/Mush4
+MRUItem6=/Game/MushroomBoys/Mush3/Mush3
+MRUItem7=/Game/MushroomBoys/Mush1/Mush1
+MRUItem8=/Game/MushroomBoys/Mush2/Mush2_
+MRUItem9=/Game/Gnome_Animated/WinterGnome/Winter_Gnome
+MRUItem10=/Game/Dialogue/DialogueStructure
+MRUItem11=/Game/Dialogue/Interact_Interface
+MRUItem12=/Game/Gnome_Animated/SpringGnome/Spring_Gnome
+MRUItem13=/Game/Gnome_Animated/MushGnome/Mush_Gnome
+MRUItem14=/Game/Gnome_Animated/ChefGnome/ChefGnome
+MRUItem15=/Game/Gnome_Animated/FallGnome/Spring_Gnome
+MRUItem16=/Game/Dialogue/Signpost_BP
 MRUItem17=/Game/AxeInteractLog
 MRUItem18=/Game/Axe/mesh/MovableAxe
 MRUItem19=/Game/BubStair
@@ -2651,6 +2650,7 @@ None=======
 /Game/MushroomBoys/Mush4/Mush4.Mush4=1
 /Game/MushroomBoys/Mush3/Mush3.Mush3=1
 /Game/Gnome_Animated/FallGnome/Spring_Gnome.Spring_Gnome=1
+/Game/MushroomBoys/Mush5/Mush5.Mush5=1
 
 [UMGEditor.Designer]
 PreviewWidth=1280
