aoe collision fix
aoe no longer incorrectly collides with aoe splatter collision

--- a/Sero_4.26/Serotopia_Grey_1 4.26/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Sero_4.26/Serotopia_Grey_1 4.26/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -148,7 +148,7 @@ Synth=False
 
 [ContentBrowser]
 ContentBrowserTab1.SelectedPaths=/Game/Levels
-ContentBrowserTab1.SelectedPaths=/Game/Blueprints/AOE/Splatter
+ContentBrowserTab1.SelectedPaths=/Game
 None=======
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
@@ -201,7 +201,7 @@ ToolbarOpenBPClass.CurrentViewType=0
 
 [EditorStartup]
 LastLevel=/Game/Levels/Forest
-LastLevel=/Game/Levels/MainMenu
+LastLevel=/Game/Levels/Forest
 None=======
 ContentBrowserTab1.ThumbnailSizeScale=0.026786
 ContentBrowserTab1.CurrentViewType=1
@@ -213,32 +213,31 @@ ToolbarOpenBPClass.CurrentViewType=0
 CleanShutdown=True
 SuppressRestorePreviouslyOpenAssetsNotification=True
 OpenAssetsAtExit=/Game/Blueprints/AOE/Splatter/AOE_Blue.AOE_Blue
-OpenAssetsAtExit=/Game/Blueprints/AOE/Splatter/AOE_Green.AOE_Green
-OpenAssetsAtExit=/Game/Blueprints/AOE/Splatter/AOE_Magenta.AOE_Magenta
-OpenAssetsAtExit=/Game/Blueprints/AOE/Splatter/AOE_Red.AOE_Red
 OpenAssetsAtExit=/Game/Blueprints/AOE/Splatter/AOE_Yellow.AOE_Yellow
+OpenAssetsAtExit=/Game/Blueprints/AOE/Splatter/AOE_Green.AOE_Green
+OpenAssetsAtExit=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter.ThirdPersonCharacter
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/AOE/Splatter/AOE_Yellow
-MRUItem1=/Game/Blueprints/AOE/Splatter/AOE_Red
-MRUItem2=/Game/Blueprints/AOE/Splatter/AOE_Magenta
-MRUItem3=/Game/Blueprints/AOE/Splatter/AOE_Green
-MRUItem4=/Game/Blueprints/AOE/Splatter/AOE_Decal
+MRUItem0=/Game/Blueprints/AOE/Splatter/AOE_Green
+MRUItem1=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
+MRUItem2=/Game/Blueprints/AOE/Projectile/AO1E
+MRUItem3=/Game/Levels/Forest
+MRUItem4=/Game/Blueprints/AOE/Splatter/AOE_Yellow
 MRUItem5=/Game/Blueprints/AOE/Splatter/AOE_Blue
-MRUItem6=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
-MRUItem7=/Game/Levels/Bubbleopolis
-MRUItem8=/Game/Gnome_Animated/FallGnome/Spring_Gnome
-MRUItem9=/Game/Levels/Forest
-MRUItem10=/Game/Dialogue/DialogueWidget2
-MRUItem11=/Game/Gnome_Animated/ChefGnome/ChefGnome
-MRUItem12=/Game/Dialogue/DialogueWidget
-MRUItem13=/Game/Dialogue/DialogueBox
-MRUItem14=/Game/Animation/Soap_Chara/Soap_Character
-MRUItem15=/Game/Animation/Soap_Chara/Johnson_idle_Skeleton
-MRUItem16=/Game/Gnome_Animated/FallGnome/Gnome_Fall
-MRUItem17=/Game/Player/Player_BP
-MRUItem18=/Game/Animation/Soap_Chara/JOhn_soap_happy_Anim
-MRUItem19=/Game/Blueprints/Pickups/SceneFinish_Actor
+MRUItem6=/Game/Blueprints/AOE/Splatter/AOE_Red
+MRUItem7=/Game/Blueprints/AOE/Splatter/AOE_Magenta
+MRUItem8=/Game/Blueprints/AOE/Splatter/AOE_Decal
+MRUItem9=/Game/Levels/Bubbleopolis
+MRUItem10=/Game/Gnome_Animated/FallGnome/Spring_Gnome
+MRUItem11=/Game/Dialogue/DialogueWidget2
+MRUItem12=/Game/Gnome_Animated/ChefGnome/ChefGnome
+MRUItem13=/Game/Dialogue/DialogueWidget
+MRUItem14=/Game/Dialogue/DialogueBox
+MRUItem15=/Game/Animation/Soap_Chara/Soap_Character
+MRUItem16=/Game/Animation/Soap_Chara/Johnson_idle_Skeleton
+MRUItem17=/Game/Gnome_Animated/FallGnome/Gnome_Fall
+MRUItem18=/Game/Player/Player_BP
+MRUItem19=/Game/Animation/Soap_Chara/JOhn_soap_happy_Anim
 
 [DetailCategories]
 SoundMix.EQ=True
@@ -2346,7 +2345,7 @@ DecalComponent.Events=True
 
 [DetailPropertyExpansion]
 SoundClass="\"Object.SoundClass.Properties\" \"Object.SoundClass.ChildClasses\" "
-Object="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+Object=
 SoundMix="\"Object.SoundClasses.SoundClassEffects\" "
 ThirdPersonCharacter_C="\"Object.Default.Light\" \"Object.Default.Dark\" \"Object.Default.LightRotation\" \"Object.Default.DarkRotation\" \"Object.Default.LightForwardVector\" \"Object.Default.DarkForwardVector\" \"Object.Default.LightLocation\" \"Object.Default.DarkLocation\" \"Object.Replication.ReplicatedMovement\" \"Object.Actor.PivotOffset\" "
 ThirdPersonCharacter_C="\"Object.Actor.PivotOffset\" "
@@ -2395,10 +2394,10 @@ GeomModifier_Extrude="\"Object.Settings\" "
 GeomModifier_Edit="\"Object.Settings\" "
 GeomModifier="\"Object.Settings\" "
 BoxComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-ShapeComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-PrimitiveComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-SceneComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-ActorComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+ShapeComponent=
+PrimitiveComponent=
+SceneComponent=
+ActorComponent=
 TriggerVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 GeomModifier_Pen="\"Object.Settings\" "
 StaticMeshActor=
@@ -2834,9 +2833,9 @@ bHideUnrelatedNodes=False
 ScreenPosition=X=624.000 Y=235.000
 ScreenPosition=X=267.000 Y=145.000
 WindowSize=X=1305.000 Y=745.000
-WindowSize=X=1420.000 Y=784.000
+WindowSize=X=1425.000 Y=789.000
 None=======
-InitiallyMaximized=False
+InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -2853,7 +2852,7 @@ FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
 UNR=../../../../../../Users/drewb/Documents/Serotopia Game/Serotopia/Serotopia_Grey_1 4.26/Content/Levels
-UNR=../../../../../../Users/jedie/OneDrive/Documents/GitHub/Serotopia V3/Serotopia/Sero_4.26/Serotopia_Grey_1 4.26/Content/Levels
+UNR=D:/ihatethis/Serotopia/Sero_4.26/Serotopia_Grey_1 4.26/Content/Levels
 None=======
 BRUSH=D:/Unreal Projects/Serotopia/Serotopia_Grey_1/Content/
 FBX=D:/Unreal Projects/Serotopia/Serotopia_Grey_1/Content/
@@ -4422,8 +4421,8 @@ DataTableEditor.TimeStamp=2021.02.06-01.28.01
 DataTableEditor.LastCompileMethod=Unknown
 
 [MRU]
-MRUItem0=/Game/Levels/Bubbleopolis
-MRUItem1=/Game/Levels/Forest
+MRUItem0=/Game/Levels/Forest
+MRUItem1=/Game/Levels/Bubbleopolis
 MRUItem2=/Game/Levels/testYellow
 MRUItem3=/Game/Levels/NewSewer
 MRUItem4=/Game/Levels/Sewer
