Throwing and Interaction with Dialogue
Throwing and Interaction with Dialogue

--- a/Sero_4.26/Serotopia_Grey_1 4.26/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Sero_4.26/Serotopia_Grey_1 4.26/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -212,30 +212,31 @@ ToolbarOpenBPClass.ThumbnailSizeScale=0.100000
 ToolbarOpenBPClass.CurrentViewType=0
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 SuppressRestorePreviouslyOpenAssetsNotification=True
+OpenAssetsAtExit=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter.ThirdPersonCharacter
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Materials/Materials/Mat_Leaves
-MRUItem1=/Game/ParticleSystems/P_FallingLeaves
-MRUItem2=/Game/ChefHatHouse/M_ChefHatHouse
-MRUItem3=/Game/ChefHatHouse/ChefHOuseV2
-MRUItem4=/Game/Pumpkin_House/Pumpkin_House_LP
-MRUItem5=/Game/Mushroom_House/MushroomHouse__1_
-MRUItem6=/Game/Water_Can_House/Watering_Can_House_LP_Watering_Can_House_UV
-MRUItem7=/Game/Water_Can_House/Watering_Can1
-MRUItem8=/Game/Levels/Forest
-MRUItem9=/Game/Levels/Sewer
-MRUItem10=/Game/Mushroom_House/lambert11
-MRUItem11=/Game/Mushroom_House/lambert12
-MRUItem12=/Game/Water_Can_House/Sunflower
-MRUItem13=/Game/Water_Can_House/Petals2
-MRUItem14=/Game/Water_Can_House/Leaf_Roof
-MRUItem15=/Game/Water_Can_House/Flower_Bud1
-MRUItem16=/Game/Water_Can_House/Door_knob
-MRUItem17=/Game/Water_Can_House/Daisy4
-MRUItem18=/Game/Water_Can_House/Watering_Can_House_LP
-MRUItem19=/Game/Levels/MainMenu
+MRUItem0=/Game/Levels/Forest
+MRUItem1=/Game/Gnome_Animated/FallGnome/Spring_Gnome
+MRUItem2=/Game/Levels/Bubbleopolis
+MRUItem3=/Game/MushroomBoys/Mush3/Mush3
+MRUItem4=/Game/Animation/Character/Throw_MC_Anim_mixamo_com
+MRUItem5=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
+MRUItem6=/Game/Player/PlayerCharacter
+MRUItem7=/Game/Player/Player_BP
+MRUItem8=/Game/MushroomBoys/Mush1/Mush1
+MRUItem9=/Game/Materials/Materials/Mat_Leaves
+MRUItem10=/Game/ParticleSystems/P_FallingLeaves
+MRUItem11=/Game/ChefHatHouse/M_ChefHatHouse
+MRUItem12=/Game/ChefHatHouse/ChefHOuseV2
+MRUItem13=/Game/Pumpkin_House/Pumpkin_House_LP
+MRUItem14=/Game/Mushroom_House/MushroomHouse__1_
+MRUItem15=/Game/Water_Can_House/Watering_Can_House_LP_Watering_Can_House_UV
+MRUItem16=/Game/Water_Can_House/Watering_Can1
+MRUItem17=/Game/Levels/Sewer
+MRUItem18=/Game/Mushroom_House/lambert11
+MRUItem19=/Game/Mushroom_House/lambert12
 
 [DetailCategories]
 SoundMix.EQ=True
@@ -2384,7 +2385,7 @@ SoundClass="\"Object.SoundClass.Properties\" \"Object.SoundClass.ChildClasses\" 
 Object=
 SoundMix="\"Object.SoundClasses.SoundClassEffects\" "
 ThirdPersonCharacter_C="\"Object.Default.Light\" \"Object.Default.Dark\" \"Object.Default.LightRotation\" \"Object.Default.DarkRotation\" \"Object.Default.LightForwardVector\" \"Object.Default.DarkForwardVector\" \"Object.Default.LightLocation\" \"Object.Default.DarkLocation\" \"Object.Replication.ReplicatedMovement\" \"Object.Actor.PivotOffset\" "
-ThirdPersonCharacter_C="\"Object.Actor.PivotOffset\" "
+ThirdPersonCharacter_C=
 Character="\"Object.Default.Light\" \"Object.Default.Dark\" \"Object.Default.LightRotation\" \"Object.Default.DarkRotation\" \"Object.Default.LightForwardVector\" \"Object.Default.DarkForwardVector\" \"Object.Default.LightLocation\" \"Object.Default.DarkLocation\" \"Object.Replication.ReplicatedMovement\" \"Object.Actor.PivotOffset\" "
 Character="\"Object.Actor.PivotOffset\" "
 Pawn="\"Object.Default.Light\" \"Object.Default.Dark\" \"Object.Default.LightRotation\" \"Object.Default.DarkRotation\" \"Object.Default.LightForwardVector\" \"Object.Default.DarkForwardVector\" \"Object.Default.LightLocation\" \"Object.Default.DarkLocation\" \"Object.Replication.ReplicatedMovement\" \"Object.Actor.PivotOffset\" "
@@ -2442,8 +2443,8 @@ DataAsset="\"Object.SkeletalMeshes\" "
 PlayerCharacter_C="\"Object.Replication.ReplicatedMovement\" \"Object.Actor.PivotOffset\" "
 PhysicsSettingsCore="\"Object.Replication.PhysicErrorCorrection\" \"Object.Broadphase.DefaultBroadphaseSettings\" \"Object.Broadphase.DefaultBroadphaseSettings.MBPBounds\" \"Object.Broadphase.DefaultBroadphaseSettings.MBPOuterBounds\" \"Object.ChaosPhysics.ChaosSettings\" "
 Image="\"Object.Appearance.Brush\" "
-Widget="\"Object.Appearance.Brush\" "
-Visual="\"Object.Appearance.Brush\" "
+Widget=
+Visual=
 TextBlock="\"Object.Appearance.Font\" "
 TextLayoutWidget="\"Object.Appearance.Font\" "
 StaticMeshComponent="\"Object.Rendering.WireframeColorOverride\" \"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
@@ -2463,7 +2464,7 @@ StaticMesh=
 MaterialParameterCollection="\"Object.Material.ScalarParameters\" \"Object.Material.ScalarParameters.ScalarParameters[1]\" \"Object.Material.ScalarParameters.ScalarParameters[2]\" "
 AnimGraphNode_SequencePlayer="\"Object.Settings.SyncGroup\" "
 AnimGraphNode_AssetPlayerBase="\"Object.Settings.SyncGroup\" "
-AnimGraphNode_Base=
+AnimGraphNode_Base="\"Object.Settings.SyncGroup\" "
 K2Node=
 EdGraphNode=
 AnimGraphNode_BlendSpacePlayer="\"Object.Settings.SyncGroup\" "
@@ -2476,7 +2477,10 @@ Lever_C=
 CapsuleComponent=
 Mush3Pedestal_C=
 Mush1Pedestal_C=
-Mush3_C="\"Object.Actor.PivotOffset\" "
+Mush3_C=
+Mush1_C="\"Object.Actor.PivotOffset\" "
+Player_BP_C="\"Object.ThrowingPaint\" "
+AnimInstance="\"Object.ThrowingPaint\" "
 
 [AssetEditorToolkitTabLocation]
 /Game/Audio/Bubbleopolis_MAster.Bubbleopolis_Master=1
@@ -2838,6 +2842,7 @@ None=======
 /Game/Mushroom_House/lambert11.lambert11=1
 /Game/ParticleSystems/P_FallingLeaves.P_FallingLeaves=1
 /Game/Materials/Materials/Mat_Leaves.Mat_Leaves=1
+/Game/Animation/Character/Throw_MC_Anim_mixamo_com.Throw_MC_Anim_mixamo_com=1
 
 [UMGEditor.Designer]
 PreviewWidth=1280
@@ -4492,9 +4497,9 @@ DataTableEditor.LastCompileMethod=Unknown
 
 [MRU]
 MRUItem0=/Game/Levels/Forest
-MRUItem1=/Game/Levels/Sewer
-MRUItem2=/Game/Levels/MainMenu
-MRUItem3=/Game/Levels/Bubbleopolis
+MRUItem1=/Game/Levels/Bubbleopolis
+MRUItem2=/Game/Levels/Sewer
+MRUItem3=/Game/Levels/MainMenu
 MRUItem4=/Game/Levels/testYellow
 MRUItem5=/Game/Levels/NewSewer
 MRUItem6=/Game/Levels/NewMap
@@ -4506,7 +4511,7 @@ MRUItem11=/Game/Levels/NewWorld
 
 [MessageLog]
 LastLogListing=LightingResults
-LastLogListing=PIE
+LastLogListing=MapCheck
 None=======
 Voice.TimeStamp=2021.02.05-04.34.25
 Voice.LastCompileMethod=External
@@ -4859,12 +4864,12 @@ Tree5Movable_C=
 MovableAxe_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,
 AxeInteractLog_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,
 Mush3Pedestal_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,
-Spring_Gnome_C=BoxComponent.Collision.Collision,
+Spring_Gnome_C=BoxComponent.Collision.Collision,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,
 PropertyWrapper=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,
 ChefGnome_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,
 DialogueGetLine=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,
 DialogueGetLine_6=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,
-DialogueWidget_C=
+DialogueWidget_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,
 Mush1_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,
 DialogueCreate_4=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,
 DialogueCreate=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,
